# nasoq

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeDoxygenDefaults.cmake  CMakeLists.txt  Doxyfile  INSTALL.vcxproj  INSTALL.vcxproj.filters  LBLSolver.cpp  LBLSolver.h  NASOQ-BIN.vcxproj  NASOQ-BIN.vcxproj.filters  NASOQ_LBLSolver.cpp  NASOQ_LBLSolver.h  README.md  TODO.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  buildAll.sh  cmake_install.cmake  doc_doxygen.vcxproj  doc_doxygen.vcxproj.filters  metis.vcxproj  metis.vcxproj.filters  nasoq.sln  nasoq.vcxproj  nasoq.vcxproj.filters  nasoq_driver.cpp
.github/workflows/: WindowsBuild.yml  cmakeMac.yml  cmakeUbuntu.yml
QP/: cholmod_utils.h  linear_solver_wrapper.h  nasoq.h  nasoq_step.h  nasoq_utils.h  osqp_utils.h  qp_format_converter.h  qp_utils.h  updown_test.h
cmake/: DownloadProject.cmake  FindMETIS.cmake  FindMKL.cmake  FindSuiteSparse.cmake
cmake/recipes/: metis.cmake
common/: BFS.h  DFS.h  Etree.h  Norm.h  PostOrder.h  Reach.h  SparseUtils.h  Sym_BLAS.h  Transpose.h  TreeUtils.h  Util.h  def.h  transpose_unsym.h
data/: last_qp_A.txt_p  last_qp_C.txt  last_qp_C.txt_C  last_qp_b.txt  last_qp_d.txt  last_qp_d.txt_dual.txt  last_qp_d.txt_info.txt  last_qp_d.txt_primal.txt  matt_qp1.yml  multiple_contacts_A.mtx  multiple_contacts_P.mtx  multiple_contacts_cvx  multiple_contacts_hP.mtx  multiple_contacts_l  multiple_contacts_primal  multiple_contacts_q  multiple_contacts_q_dual.txt  multiple_contacts_q_info.txt  multiple_contacts_q_primal.txt  osqp_failure_A.txt_A  osqp_failure_A2.txt_A  osqp_failure_C.txt_C  osqp_failure_C2.txt_C  osqp_failure_C3.txt_C  osqp_failure_b.txt  osqp_failure_b.txt_dual.txt  osqp_failure_b.txt_info.txt  osqp_failure_b.txt_primal.txt  osqp_failure_b2.txt  osqp_failure_b2.txt_dual.txt  osqp_failure_b2.txt_info.txt  osqp_failure_b2.txt_primal.txt  osqp_failure_b3.txt  osqp_failure_b3.txt_dual.txt  osqp_failure_b3.txt_info.txt  osqp_failure_b3.txt_primal.txt  osqp_failure_d.txt  osqp_failure_d2.txt  osqp_failure_d3.txt  out_correct.csv  (+7 more)
docs/: Doxyfile.in
eigen_interface/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LBL_Eigen.vcxproj  LBL_Eigen.vcxproj.filters  NASOQ_Eigen.vcxproj  NASOQ_Eigen.vcxproj.filters  cmake_install.cmake  eigen_lbl_driver.cpp  eigen_nasoq_driver.cpp  lbl_eigen.h  nasoq_eigen.h
eigen_interface/include/nasoq/: lbl_eigen.h  nasoq_eigen.h
examples/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LBLSOMOD_Test.vcxproj  LBLSOMOD_Test.vcxproj.filters  LBL_Test.vcxproj  LBL_Test.vcxproj.filters  NASOQ_Step_Test.vcxproj  NASOQ_Step_Test.vcxproj.filters  NASOQ_Test.vcxproj  NASOQ_Test.vcxproj.filters  README.md  cmake_install.cmake  lbl_main.cpp  lbl_somod_main.cpp  nasoq_main.cpp  nasoq_step_main.cpp  nasoq_tuned_main.cpp
gmres/: gmres_ldlt.h  mgmres.hpp
include/: nasoq.h  nasoq_step.h
include/QP/: cholmod_utils.h  linear_solver_wrapper.h  osqp_utils.h
include/common/: DFS.h  Norm.h  SparseUtils.h  Sym_BLAS.h  TreeUtils.h  Util.h  def.h  transpose_unsym.h
include/ldl/: Parallel_simplicial_ldl.h  Parallel_update_ldl_02_2.h  Parallel_update_simplicial.h  Serial_blocked_ldl.h  Serial_blocked_ldl_02_2.h  Serial_update_ldl.h  Serial_update_ldl_static.h  parallel_blocked_ldlt.h  parallel_blocked_ldlt_03.h
include/nasoq/: nasoq.h  nasoq_step.h
include/symbolic/: ColumnCount.h  performanceModel.h  supernode_detection.h
include/triangularSolve/: BLAS.h  Triangular_BCSC.h
ldl/: Parallel_simplicial_ldl.h  Parallel_update_ldl_02_2.h  Parallel_update_simplicial.h  Serial_blocked_ldl.h  Serial_blocked_ldl_02.h  Serial_blocked_ldl_02_2.h  Serial_update_ldl.h  Serial_update_ldl_static.h  Serial_update_simplicial_ldl.h  ldlt_check.h  parallel_blocked_ldlt.h  parallel_blocked_ldlt_02.h  parallel_blocked_ldlt_03.h  serial_simplicial_ldl.h
linear_solver/: Iterative_Refinement.h  linear_system_generation.h  solve_phase.h
matlab/: CMakeLists.txt  README.md  nasoq.cpp  nasoq.m  test_bbw.m  test_nasoq.m
matlab/cmake/: .FindMKL.cmake.un~  FindMATLAB.cmake  FindMKL.cmake  FindSuiteSparse.cmake  OSXFixDylibReferences.cmake  gptoolbox_download_project.cmake
matrixMatrix/: spmm.h
matrixVector/: spmv_CSC.h
scripts/: run_all_qps.sh  run_pc.sh
scripts/python_scripts/: README.md  download_matrices.py  graph_generator.py  lin_solver_graph_gen.py  osqp_utils.py
smp-format/: CMakeLists.txt  LICENSE  README.md  bounded2smp.cpp  cxxopts.hpp  def.h  ie2smp.cpp  io.h  mp_format_converter.h  run_all_qps.sh  sample.yml  smp_convertor.cpp  smp_format.h  sparse_utilities.h  utils.h
src/: nasoq.cpp  nasoq_step.cpp
src/QP/: linear_solver_wrapper.cpp  nasoq_utils.cpp  osqp_utils.cpp  qp_utils.cpp  updown_test.cpp
src/clapacke/: clapacke_dlapmt.cpp  clapacke_dsytrf.cpp
src/common/: DFS.cpp  Etree.cpp  Norm.cpp  PostOrder.cpp  Reach.cpp  SparseUtils.cpp  Sym_BLAS.cpp  Transpose.cpp  TreeUtils.cpp  Util.cpp  def.cpp  transpose_unsym.cpp
src/eigen_shim/: eigen_lapack.cpp
src/gmres/: mgmres.cpp
src/ldl/: Parallel_simplicial_ldl.cpp  Parallel_update_ldl_02_2.cpp  Parallel_update_simplicial.cpp  Serial_blocked_ldl.cpp  Serial_blocked_ldl_02_2.cpp  Serial_update_ldl.cpp  Serial_update_ldl_static.cpp  Serial_update_simplicial_ldl.cpp  ldlt_check.cpp  parallel_blocked_ldlt.cpp  parallel_blocked_ldlt_02.cpp  parallel_blocked_ldlt_03.cpp  serial_simplicial_ldl.cpp
src/linear_solver/: solve_phase.cpp
src/matrixMatrix/: spmm.cpp
src/matrixVector/: spmv_CSC.cpp
src/symbolic/: ColumnCount.cpp  InspectionLevel_06.cpp  Partitioning.cpp  PostOrderSpliting.cpp  performanceModel.cpp  symbolic_phase.cpp  (+1 more)
symbolic/: ColumnCount.h  InspectionLevel_06.h  Partitioning.h  PostOrderSpliting.h  performanceModel.h  supernode_detection.h  symbolic_phase.h
tests/: 1.json  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  NASOQ_Catch2_Tests.vcxproj  NASOQ_Catch2_Tests.vcxproj.filters  NlohmannJsonTargets.cmake  cmake_install.cmake  test_1.cpp  test_clapacke.cpp
triangularSolve/: BLAS.h  Triangular_BCSC.h  Triangular_CSC.h
(+38 files in other folders)
